--- a/frontend/src/styles/Banner.scss
+++ b/frontend/src/styles/Banner.scss
@@ -13,6 +13,8 @@ p {
     align-items: center;
     grid-gap: 2px;
     color:white;
+    border-bottom: 1px solid white;
+    margin-bottom: 10%;
 }
 
 .banner-chat {
@@ -24,6 +26,8 @@ p {
     align-items: center;
     grid-gap: 2px;
     color:white;
+    border-bottom: 1px solid white;
+    margin-bottom: 10%;
 }
 
 .banner-logout-button {
