--- a/frontend/src/styles/App.sass
+++ b/frontend/src/styles/App.sass
@@ -2,6 +2,7 @@ $quantity: 30
 
 html, body
   height: 100%
+  margin: 0
 
 body
   background: url(https://i.pinimg.com/originals/44/6e/3b/446e3b79395a287ca32f7977dd83b290.jpg)
