--- a/frontend/src/styles/ChatMessages.scss
+++ b/frontend/src/styles/ChatMessages.scss
@@ -1,10 +1,32 @@
 .message-window {
-    text-align: center;
     width: fit-content;
     margin-left: auto;
     margin-right: auto;
 }
 
 .message-table {
-    width: 600px;
+    width: 55rem;
 }
+
+.time {
+    width: 5rem;
+    font-size: 1rem;
+}
+
+.user {
+    width: 10rem;
+    font-size: 2rem;
+}
+
+.msg {
+    width: 35rem;
+    font-size: 1.5rem;
+}
+
+td {
+    padding: 0.3rem;
+    text-align: left;
+    color: white;
+    background-color: black;
+    
+  }
